@@ -219,6 +219,7 @@ Localization
         #cc.param.CollectScience.rm.RecoverOrTransmit = Recover or transmit
         #cc.param.CollectScience.0 = Collect science
         // Experiments, biome/CB, situation
+        #cc.param.CollectScience.1 = Collect science: <<1>>
         #cc.param.CollectScience.2 = Collect science: <<1>> from <<2>>
         #cc.param.CollectScience.3 = Collect science: <<1>> from <<2>> while <<3>>
         #cc.param.CollectScience.destination = Destination: <<C:1>>
