@@ -220,6 +220,7 @@ Localization
 
 
         // Experiments, biome/CB, situation
+        #cc.param.CollectScience.1 = 收集科学点数: <<1>>
         #cc.param.CollectScience.2 = 收集科学点数: <<1>> 从 <<2>>
         #cc.param.CollectScience.3 = 收集科学点数: <<1>> 从 <<2>> 在 <<3>>
         #cc.param.CollectScience.destination = 目的地: <<C:1>>
