@@ -6,7 +6,6 @@ CONTRACT_TYPE
 
     group = ParameterTest
     maxSimultaneous = 1
-    targetBody = Kerbin
 
     // Contract text
     title = VesselHistory Parameters
@@ -18,7 +17,16 @@ CONTRACT_TYPE
     {
         type = CollectScience
 
+        experiment = evaReport
+        recoveryMethod = Ideal
+    }
+
+    PARAMETER
+    {
+        type = CollectScience
+
         biome = Shores
+    targetBody = Kerbin
         situation = SrfLanded
         location = Surface
         experiment = evaReport
@@ -35,6 +43,7 @@ CONTRACT_TYPE
             type = CollectScience
 
             biome = LaunchPad
+            targetBody = Kerbin
             situation = SrfLanded
             experiment = crewReport
         }
@@ -63,7 +72,7 @@ CONTRACT_TYPE
         title = Need to have available science for ORBITED bodies
 
         scienceSubject = AllScienceSubjects().Random()
-        scienceSubject2 = AllScienceSubjectsByBody([@targetBody]).Where(ss => ss.RemainingScience() >= 20).Random()
+        scienceSubject2 = AllScienceSubjectsByBody([HomeWorld()]).Where(ss => ss.RemainingScience() >= 20).Random()
         scienceSubjectNoBiome = AllScienceSubjectsByBody(OrbitedBodies()).Where(ss => ss.Biome() == null).Random()
     }
 
