@@ -1,6 +1,7 @@
 Contract Configurator 1.30.1
 - Translation for Chinese Simplified (thanks tinygrox).
 - Restore compatibility back to KSP 1.8.1.
+- Fixed exception in CollectionScience title when there is no targetBody (thanks Morphisor).
 
 Contract Configurator 1.30.0
 - Recompile against KSP 1.10.1.
